--- a/blog/templates/blog/home_page.html
+++ b/blog/templates/blog/home_page.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<button>BUTTON</button>
+<button onclick="window.location.href = 'http://127.0.0.1:8000/admin';">BUTTON</button>
 </body>
 </html>
